Add basic pydantic models for Defect, Gap, OrderedDefectsGaps, DefectData

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
     "\n",
     "from hashlib import sha256\n",
     "import matplotlib.pyplot as plt\n",
-    "from pydantic import BaseModel, ConfigDict\n",
+    "from pydantic import BaseModel, ConfigDict, Field, computed_field\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
     "import pandas as pd\n",
@@ -25,9 +25,6 @@
     "from matplotlib.colors import Normalize\n",
     "\n",
     "from topostats.damage.damage import (\n",
-    "    Defect,\n",
-    "    DefectGap,\n",
-    "    OrderedDefectGapList,\n",
     "    calculate_indirect_defect_gaps,\n",
     "    get_defects_and_gaps_from_bool_array,\n",
     ")\n",
@@ -48,6 +45,14 @@
     "    from IPython.display import clear_output as ipy_clear_output\n",
     "\n",
     "    ipy_clear_output()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4e2acfd",
+   "metadata": {},
+   "source": [
+    "# Loading"
    ]
   },
   {
@@ -147,6 +152,72 @@
     "    model_config = ConfigDict(arbitrary_types_allowed=True)\n",
     "\n",
     "\n",
+    "class Defect(BaseDamageAnalysis):\n",
+    "    start_index: int\n",
+    "    end_index: int\n",
+    "    length_nm: float\n",
+    "    position_along_trace_nm: float\n",
+    "    total_turn_radians: tuple[float, float]\n",
+    "\n",
+    "    def __eq__(self, other: object) -> bool:\n",
+    "        if not isinstance(other, Defect):\n",
+    "            raise TypeError(f\"Cannot compare Defect with {type(other)}\")\n",
+    "        return (\n",
+    "            self.start_index == other.start_index\n",
+    "            and self.end_index == other.end_index\n",
+    "            and np.isclose(self.length_nm, other.length_nm, rtol=1e-9, atol=1e-12)\n",
+    "            and np.isclose(self.position_along_trace_nm, other.position_along_trace_nm, rtol=1e-9, atol=1e-12)\n",
+    "            and np.isclose(self.total_turn_radians[0], other.total_turn_radians[0], rtol=1e-9, atol=1e-12)\n",
+    "            and np.isclose(self.total_turn_radians[1], other.total_turn_radians[1], rtol=1e-9, atol=1e-12)\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "class DefectGap(BaseDamageAnalysis):\n",
+    "    start_index: int\n",
+    "    end_index: int\n",
+    "    length_nm: float\n",
+    "    position_along_trace_nm: float\n",
+    "\n",
+    "\n",
+    "class OrderedDefectsGaps(BaseDamageAnalysis):\n",
+    "    defect_gap_list: list[Defect | DefectGap] = Field(default_factory=list)\n",
+    "\n",
+    "    # post-init to sort the list by start index\n",
+    "    def model_post_init(self, __context: dict | None = None) -> None:\n",
+    "        self.sort_defect_gap_list()\n",
+    "\n",
+    "    def sort_defect_gap_list(self) -> None:\n",
+    "        self.defect_gap_list.sort(key=lambda x: x.start_index)\n",
+    "\n",
+    "    def add_item(self, item: Defect | DefectGap) -> None:\n",
+    "        self.defect_gap_list.append(item)\n",
+    "        self.sort_defect_gap_list()\n",
+    "\n",
+    "    def __eq__(self, other: object) -> bool:\n",
+    "        if not isinstance(other, OrderedDefectsGaps):\n",
+    "            raise TypeError(f\"Cannot compare OrderedDefectsGaps with {type(other)}\")\n",
+    "        if len(self.defect_gap_list) != len(other.defect_gap_list):\n",
+    "            return False\n",
+    "\n",
+    "        for item_self, item_other in zip(self.defect_gap_list, other.defect_gap_list):\n",
+    "            if item_self != item_other:\n",
+    "                return False\n",
+    "\n",
+    "\n",
+    "class DefectData(BaseDamageAnalysis):\n",
+    "    ordered_defects_and_gaps: OrderedDefectsGaps\n",
+    "\n",
+    "    @computed_field\n",
+    "    @property\n",
+    "    def num_defects(self) -> int:\n",
+    "        return sum(isinstance(item, Defect) for item in self.ordered_defects_and_gaps.defect_gap_list)\n",
+    "\n",
+    "    @computed_field\n",
+    "    @property\n",
+    "    def num_gaps(self) -> int:\n",
+    "        return sum(isinstance(item, DefectGap) for item in self.ordered_defects_and_gaps.defect_gap_list)\n",
+    "\n",
+    "\n",
     "class GrainModel(BaseDamageAnalysis):\n",
     "    global_grain_id: int | None = None\n",
     "    file_grain_id: int\n",
@@ -167,6 +238,7 @@
     "    mask: npt.NDArray[np.bool_]\n",
     "    node_coords: npt.NDArray[np.float64]\n",
     "    num_nodes: int\n",
+    "    defect_data: DefectData | None = None\n",
     "\n",
     "\n",
     "class GrainModelCollection(BaseDamageAnalysis):\n",
@@ -568,6 +640,24 @@
     "\n",
     "grain_model_collection = construct_grains_collection_from_topostats_files(bbox_padding=1)\n",
     "print(grain_model_collection)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcc6142e",
+   "metadata": {},
+   "source": [
+    "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d241b00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defect detection"
    ]
   }
  ],
