Add function to update older GrainModels to new versions

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import pickle\n",
     "import re\n",
     "from pathlib import Path\n",
-    "from typing import Generator\n",
+    "from typing import Generator, Generic\n",
     "\n",
     "from hashlib import sha256\n",
     "import matplotlib.pyplot as plt\n",
@@ -238,7 +238,26 @@
     "    mask: npt.NDArray[np.bool_]\n",
     "    node_coords: npt.NDArray[np.float64]\n",
     "    num_nodes: int\n",
+    "\n",
+    "    # analysis attributes, always optional since they are yet to be calculated\n",
     "    defect_data: DefectData | None = None\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        # simplified string\n",
+    "        return (\n",
+    "            f\"GrainModel(global_grain_id={self.global_grain_id}), {self.percent_damage}% \"\n",
+    "            f\"damage, from file {self.filename}.\"\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "def update_grain_model_from_previous_version(grain_model: GrainModel) -> GrainModel:\n",
+    "    # sometimes we will load a grain model that was created before we added a class attribute, or method\n",
+    "    # so we can use this to update the grain model to have the new attributes / methods\n",
+    "\n",
+    "    # create a new grain model with the same data\n",
+    "    updated_grain_model = GrainModel(**grain_model.model_dump(exclude_unset=True))\n",
+    "\n",
+    "    return updated_grain_model\n",
     "\n",
     "\n",
     "class GrainModelCollection(BaseDamageAnalysis):\n",
@@ -289,6 +308,16 @@
     "        if global_grain_id not in self.grains:\n",
     "            raise KeyError(f\"grain with global id {global_grain_id} not found in collection, cannot remove\")\n",
     "        del self.grains[global_grain_id]\n",
+    "\n",
+    "\n",
+    "def update_all_grain_models_in_collection_from_previous_version(\n",
+    "    collection: GrainModelCollection,\n",
+    ") -> GrainModelCollection:\n",
+    "    updated_collection = GrainModelCollection(grains={})\n",
+    "    for grain in collection.values():\n",
+    "        updated_grain = update_grain_model_from_previous_version(grain)\n",
+    "        updated_collection.add_grain(updated_grain)\n",
+    "    return updated_collection\n",
     "\n",
     "\n",
     "def combine_grain_model_collections(collections: list[GrainModelCollection]) -> GrainModelCollection:\n",
@@ -653,11 +682,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e41fc6f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# update the models\n",
+    "grain_model_collection = update_all_grain_models_in_collection_from_previous_version(grain_model_collection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4d241b00",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# defect detection"
+    "# defect detection\n",
+    "first_grain = next(iter(grain_model_collection.values()))\n",
+    "print(first_grain)\n",
+    "print(first_grain.defect_data)"
    ]
   }
  ],
@@ -677,7 +720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
