Add plotting method to GrainModel

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -31,7 +31,14 @@
     "from topostats.io import LoadScans\n",
     "from topostats.measure.curvature import discrete_angle_difference_per_nm_circular, total_turn_in_region_radians\n",
     "from topostats.tracing.splining import resample_points_regular_interval\n",
-    "from topostats.unet_masking import make_bounding_box_square, pad_bounding_box_cutting_off_at_image_bounds"
+    "from topostats.unet_masking import make_bounding_box_square, pad_bounding_box_cutting_off_at_image_bounds\n",
+    "from topostats.plottingfuncs import Colormap\n",
+    "\n",
+    "colormap = Colormap()\n",
+    "CMAP = colormap.get_cmap()\n",
+    "VMIN = -3\n",
+    "VMAX = 4\n",
+    "IMGPLOTARGS = {\"cmap\": CMAP, \"vmin\": VMIN, \"vmax\": VMAX}"
    ]
   },
   {
@@ -249,6 +256,12 @@
     "            f\"damage, from file {self.filename}.\"\n",
     "        )\n",
     "\n",
+    "    def plot(self, mask_alpha: float = 0.3) -> None:\n",
+    "        plt.imshow(self.image, **IMGPLOTARGS)\n",
+    "        plt.imshow(self.mask[:, :, 1], alpha=mask_alpha, cmap=\"gray\")\n",
+    "        plt.title(f\"grain {self.global_grain_id}, {self.percent_damage}% damage\")\n",
+    "        plt.show()\n",
+    "\n",
     "\n",
     "def update_grain_model_from_previous_version(grain_model: GrainModel) -> GrainModel:\n",
     "    # sometimes we will load a grain model that was created before we added a class attribute, or method\n",
@@ -318,6 +331,12 @@
     "        updated_grain = update_grain_model_from_previous_version(grain)\n",
     "        updated_collection.add_grain(updated_grain)\n",
     "    return updated_collection\n",
+    "\n",
+    "\n",
+    "def update_all_molecule_data_in_collection_from_previous_version(\n",
+    "    collection: MoleculeDataCollection,\n",
+    ") -> MoleculeDataCollection:\n",
+    "    pass\n",
     "\n",
     "\n",
     "def combine_grain_model_collections(collections: list[GrainModelCollection]) -> GrainModelCollection:\n",
@@ -700,7 +719,73 @@
     "# defect detection\n",
     "first_grain = next(iter(grain_model_collection.values()))\n",
     "print(first_grain)\n",
-    "print(first_grain.defect_data)"
+    "\n",
+    "\n",
+    "def find_curvature_defects(\n",
+    "    grain_model_collection: GrainModelCollection,\n",
+    "    curvature_defect_method: str,\n",
+    "    curvature_threshold_iqr_multiplier: float,\n",
+    "    curvature_threshold_absolute_pernm: float,\n",
+    ") -> set[int]:\n",
+    "    # find curvature defects\n",
+    "    bad_grains = set()\n",
+    "    if curvature_defect_method == \"iqr\":\n",
+    "        # iterate over each grain\n",
+    "        for global_grain_id, grain_model in grain_model_collection.items():\n",
+    "            for molecule_id, molecule_data in grain_model.molecule_data.items():\n",
+    "                molecule_data_curvature_data = molecule_data[\"curvature_data\"]\n",
+    "                if molecule_data_curvature_data is None:\n",
+    "                    print(\n",
+    "                        f\"no curvature data for grain {global_grain_id} molecule {molecule_id}, skipping curvature defect detection for this molecule\"\n",
+    "                    )\n",
+    "                    bad_grains.add(global_grain_id)\n",
+    "                    continue\n",
+    "                curvatures = molecule_data_curvature_data[\"curvatures\"]\n",
+    "                assert isinstance(\n",
+    "                    curvatures, np.ndarray\n",
+    "                ), f\"expected curvatures to be a numpy array, but got {type(curvatures)}\"\n",
+    "                pass\n",
+    "\n",
+    "    return bad_grains\n",
+    "\n",
+    "\n",
+    "def find_defects_in_height_and_curvature(\n",
+    "    grain_model_collection: GrainModelCollection,\n",
+    "    height_defect_method: str,\n",
+    "    height_threshold_iqr_multiplier: float,\n",
+    "    height_threshold_absolute_nm: float,\n",
+    "    curvature_defect_method: str,\n",
+    "    curvature_threshold_iqr_multiplier: float,\n",
+    "    curvature_threshold_absolute_pernm: float,\n",
+    ") -> set[int]:\n",
+    "\n",
+    "    bad_grains = set()\n",
+    "\n",
+    "    # find curvature defects\n",
+    "    additional_bad_grains = find_curvature_defects(\n",
+    "        grain_model_collection=grain_model_collection,\n",
+    "        curvature_defect_method=curvature_defect_method,\n",
+    "        curvature_threshold_iqr_multiplier=curvature_threshold_iqr_multiplier,\n",
+    "        curvature_threshold_absolute_pernm=curvature_threshold_absolute_pernm,\n",
+    "    )\n",
+    "    bad_grains.update(additional_bad_grains)\n",
+    "\n",
+    "    return bad_grains\n",
+    "\n",
+    "\n",
+    "bad_grains = find_defects_in_height_and_curvature(\n",
+    "    grain_model_collection=grain_model_collection,\n",
+    "    height_defect_method=\"iqr\",\n",
+    "    height_threshold_iqr_multiplier=1.5,\n",
+    "    height_threshold_absolute_nm=0.8,\n",
+    "    curvature_defect_method=\"iqr\",\n",
+    "    curvature_threshold_iqr_multiplier=1.5,\n",
+    "    curvature_threshold_absolute_pernm=0.1,\n",
+    ")\n",
+    "\n",
+    "for global_grain_id in bad_grains:\n",
+    "    bad_grain = grain_model_collection[global_grain_id]\n",
+    "    bad_grain.plot(mask_alpha=0.1)"
    ]
   }
  ],
