Add MoleculeData updater functions

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "9f5db1da",
    "metadata": {},
    "outputs": [],
@@ -223,6 +223,51 @@
     "    @property\n",
     "    def num_gaps(self) -> int:\n",
     "        return sum(isinstance(item, DefectGap) for item in self.ordered_defects_and_gaps.defect_gap_list)\n",
+    "\n",
+    "\n",
+    "class MoleculeData(BaseDamageAnalysis):\n",
+    "    molecule_id: int\n",
+    "\n",
+    "\n",
+    "class MoleculeDataCollection(BaseDamageAnalysis):\n",
+    "    molecules: dict[int, MoleculeData]\n",
+    "\n",
+    "    def __getitem__(self, key: int) -> MoleculeData:\n",
+    "        return self.molecules[key]\n",
+    "\n",
+    "    def __iter__(self) -> Generator[tuple[int, MoleculeData], None, None]:\n",
+    "        return (item for item in self.molecules.items())\n",
+    "\n",
+    "    def __len__(self) -> int:\n",
+    "        return len(self.molecules)\n",
+    "\n",
+    "    def __contains__(self, key: int) -> bool:\n",
+    "        return key in self.molecules\n",
+    "\n",
+    "    def items(self) -> Generator[tuple[int, MoleculeData], None, None]:\n",
+    "        return (item for item in self.molecules.items())\n",
+    "\n",
+    "    def keys(self) -> Generator[int, None, None]:\n",
+    "        return (key for key in self.molecules.keys())\n",
+    "\n",
+    "    def values(self) -> Generator[MoleculeData, None, None]:\n",
+    "        return (value for value in self.molecules.values())\n",
+    "\n",
+    "    def get(self, key: int, default: MoleculeData | None = None) -> MoleculeData | None:\n",
+    "        return self.molecules.get(key, default)\n",
+    "\n",
+    "    def add_molecule(self, molecule: MoleculeData) -> None:\n",
+    "        self.molecules[molecule.molecule_id] = molecule\n",
+    "\n",
+    "    def remove_molecule(self, molecule_id: int) -> None:\n",
+    "        if molecule_id not in self.molecules:\n",
+    "            raise KeyError(f\"molecule with id {molecule_id} not found in collection, cannot remove\")\n",
+    "        del self.molecules[molecule_id]\n",
+    "\n",
+    "\n",
+    "def update_molecule_data_from_previous_version(molecule_data: MoleculeData) -> MoleculeData:\n",
+    "    updated_molecule_data = MoleculeData(**molecule_data.model_dump(exclude_unset=True))\n",
+    "    return updated_molecule_data\n",
     "\n",
     "\n",
     "class GrainModel(BaseDamageAnalysis):\n",
@@ -336,7 +381,11 @@
     "def update_all_molecule_data_in_collection_from_previous_version(\n",
     "    collection: MoleculeDataCollection,\n",
     ") -> MoleculeDataCollection:\n",
-    "    pass\n",
+    "    updated_collection = MoleculeDataCollection(molecules={})\n",
+    "    for molecule_data in collection.values():\n",
+    "        updated_molecule_data = update_molecule_data_from_previous_version(molecule_data)\n",
+    "        updated_collection.add_molecule(updated_molecule_data)\n",
+    "    return updated_collection\n",
     "\n",
     "\n",
     "def combine_grain_model_collections(collections: list[GrainModelCollection]) -> GrainModelCollection:\n",
