begin to calculate curvatrue defects from thresholds

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -634,7 +634,7 @@
     "    return grain_model_collection\n",
     "\n",
     "\n",
-    "grain_collection = construct_grains_collection_from_topostats_files(bbox_padding=1, force_reload=True)\n",
+    "grain_collection = construct_grains_collection_from_topostats_files(bbox_padding=1, force_reload=False)\n",
     "print(grain_collection)"
    ]
   },
@@ -784,6 +784,12 @@
     "            num_nodes=unanalysed_grain.num_nodes,\n",
     "        )\n",
     "\n",
+    "    def __str__(self) -> str:\n",
+    "        return (\n",
+    "            f\"GrainModel(global_grain_id={self.global_grain_id}), {self.percent_damage}% damage, \"\n",
+    "            f\"with {len(self.molecule_data_collection)} molecules, from file {self.filename}.\"\n",
+    "        )\n",
+    "\n",
     "    def plot(self, mask_alpha: float = 0.3, linemode: str = \"\") -> None:\n",
     "        plt.imshow(self.image, **IMGPLOTARGS)\n",
     "        plt.imshow(self.mask[:, :, 1], alpha=mask_alpha, cmap=\"gray\")\n",
@@ -885,7 +891,14 @@
     "                assert isinstance(\n",
     "                    curvatures, np.ndarray\n",
     "                ), f\"expected curvatures to be a numpy array, but got {type(curvatures)}\"\n",
-    "                pass\n",
+    "                # calculate the curvature thresholds\n",
+    "                iqr = np.percentile(curvatures, 75) - np.percentile(curvatures, 25)\n",
+    "                # the threshold is the median + factor * iqr\n",
+    "                print(np.percentile(curvatures, 50))\n",
+    "                curvature_threshold_iqr = curvature_threshold_iqr_multiplier * iqr + np.percentile(curvatures, 50)\n",
+    "                curvature_defects = np.where(np.abs(curvatures) > curvature_threshold_iqr)[0]\n",
+    "\n",
+    "                raise NotImplementedError(\"pause here\")\n",
     "\n",
     "    return bad_grains\n",
     "\n",
