switch to timestamp hashing

--- a/picoz-damage-analysis.ipynb
+++ b/picoz-damage-analysis.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import psutil\n",
     "import pickle\n",
+    "from datetime import datetime\n",
     "import re\n",
     "from pathlib import Path\n",
     "from typing import Generator, Generic\n",
@@ -516,6 +517,14 @@
     "# Extract the grains from the topostats files\n",
     "\n",
     "\n",
+    "def get_modified_file_time_hash(file_path: Path) -> str:\n",
+    "    modified_time_timestamp = file_path.stat().st_mtime\n",
+    "    modified_time_iso = datetime.fromtimestamp(modified_time_timestamp).isoformat()\n",
+    "    # hash it\n",
+    "    modified_time_hash = sha256(modified_time_iso.encode()).hexdigest()\n",
+    "    return modified_time_hash\n",
+    "\n",
+    "\n",
     "def construct_grains_collection_from_topostats_files(\n",
     "    bbox_padding: int, force_reload: bool = False\n",
     ") -> UnanalysedGrainCollection:\n",
@@ -553,9 +562,9 @@
     "            file_topostats = dir_topo_file / f\"{filename}.topostats\"\n",
     "            assert file_topostats.exists(), f\"could not find topostats file at {file_topostats}\"\n",
     "\n",
-    "            # calculate the hash of the file\n",
-    "            file_topostats_hash = sha256(file_topostats.read_bytes()).hexdigest()\n",
-    "            file_paths_and_hashes_topostats[file_topostats] = file_topostats_hash\n",
+    "            file_topostats_timestamp_hash = get_modified_file_time_hash(file_topostats)\n",
+    "\n",
+    "            file_paths_and_hashes_topostats[file_topostats] = file_topostats_timestamp_hash\n",
     "\n",
     "        # create hash for the folder by combining the hashes of the files in the folder\n",
     "        combined_hash_string = \"\".join(sorted(file_paths_and_hashes_topostats.values()))\n",
